--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,10 +1,12 @@
 name: flutter_stetho_example
 description: Demonstrates how to use the flutter_stetho plugin.
+environment:
+  sdk: '>=2.12.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  http: ^0.12.0
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
